# MyProgrammingProjects

./: README.md
Arduino/ColorMixingLamp/: ColorMixingLamp.ino
Arduino/LightTheremin/: LightTheremin.ino
Arduino/LoveOMeter/: LoveOMeter.ino
Arduino/MoodCue/: MoodCue.ino
Arduino/SpaceShipControl/: SpaceShipControl.ino
C++/ACPC/: ModuloSummation.cpp  betogether.cpp  betogether.out  miraiStones.cpp  newYrCandles.cpp
C++/ACPC/Practice Comp 1/: ModuloSummation.cpp  betogether.cpp  candles.out  miraiStones.cpp  newYrCandles.cpp  stones.out  there.out  therfore.cpp
C++/ACPC/Practice Comp 2/: stars.cpp  stars.out
C++/ACPC/Spring_2022/: coin_combinations1.cpp  error.cpp  last_minute_enhancements.cpp  missing_number.cpp  test  testing.cpp  weird_algo.cpp
C++/ACPC/Spring_2023/: hideG.cpp  out  pizzaP.cpp  test.cpp  testG.txt  testP.txt
C++/C++ Learning/: GoToJail.cpp  HelloWorld.cpp  IrohaLovesStrings.cpp  TimeStamp.txt  gtj.out  ils.out
C++/C++ Learning/Random/: DataTypes.cpp  GoToJail.cpp  HelloWorld.cpp  IrohaLovesStrings.cpp  TimeStamp.txt  a.out
C++/C++ Learning/SDLTest/: a.out  main.cpp
C++/C++ Learning/SIGIL Test/: main.cpp
C++/C++ Learning/idk/: test.cpp  tester
C++/C++ Projects/Testing/: main.cpp  (+1 more)
C++/C++ Projects/TestingWithSDL/: CMakeLists.txt  SDL_Renderer.cpp  SDL_Renderer.h  main.cpp
C++/CSES/: RangeSumQueries1.cpp
C++/UTCP/: d.out  problemD.cpp
C/kClass/: ci-lab.tar
Javascript/GameOfLife/: index.html  sketch.js
Javascript/Noise/: index.html  particle.js  sketch.js
Javascript/QuadTreeTesting/: index.html  quadtree.js  sketch.js
(+277 files in other folders)
